--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.0.1",
-    "jade": "*"
+    "jade": "*",
+    "express-expose": "~0.3.3",
+    "mongoskin": "~0.4.4"
   }
 }
