--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "jade": "*",
     "express-expose": "~0.3.3",
     "mongoskin": "~0.4.4"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
